add filter logic to /products
